Pipeline proberen te fixen en UC-103

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,6 @@
 # image: node:latest
 
 stages:
-  - test
   - production
 
 #
@@ -74,4 +73,4 @@ production:
     - gem install dpl
     - dpl --provider=heroku --app=$HEROKU_APP_NAME --api-key=$HEROKU_API_KEY
   only:
-    - master
+    - main
